[gd_scene load_steps=12 format=3 uid="uid://30qufw5s2dgm"]

[ext_resource type="Script" uid="uid://bv46265ed7uty" path="res://Scripts/Player.gd" id="1_bfmnv"]
[ext_resource type="Texture2D" uid="uid://c5w4sfl4y270h" path="res://Assets/Textures/Spooky.png" id="1_jlsf4"]
[ext_resource type="Script" uid="uid://dmrgabhd7cfeo" path="res://Scripts/Interact.gd" id="3_dewec"]
[ext_resource type="Texture2D" uid="uid://bmjf0edk14a7l" path="res://Assets/Textures/flashlight.jpg" id="3_nn08x"]
[ext_resource type="PackedScene" uid="uid://78nastiglwp7" path="res://Scenes/Menu.tscn" id="4_dewec"]
[ext_resource type="Script" uid="uid://50tfv4mvwrtj" path="res://Scripts/crosshair.gd" id="5_5ixxa"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_if0ag"]
radius = 0.3
height = 1.75

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xsxup"]
radius = 0.2
height = 1.75

[sub_resource type="SphereMesh" id="SphereMesh_di1wr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8j2mw"]
albedo_texture = ExtResource("1_jlsf4")
texture_filter = 0

[sub_resource type="LabelSettings" id="LabelSettings_dewec"]
font_size = 30

[node name="Player" type="CharacterBody3D" groups=["Element", "Player"]]
collision_layer = 4
collision_mask = 5
floor_stop_on_slope = false
script = ExtResource("1_bfmnv")

[node name="PlayerColl" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.877795, 0)
shape = SubResource("CapsuleShape3D_if0ag")

[node name="WorldModel" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.877795, 0)

[node name="BodyMesh" type="MeshInstance3D" parent="WorldModel"]
mesh = SubResource("CapsuleMesh_xsxup")
skeleton = NodePath("../..")

[node name="HeadOriginalPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.45069, 0)

[node name="Head" type="Node3D" parent="HeadOriginalPosition"]
unique_name_in_owner = true

[node name="CamSmooth" type="Node3D" parent="HeadOriginalPosition/Head"]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="HeadOriginalPosition/Head/CamSmooth"]
unique_name_in_owner = true
cull_mask = 1048573

[node name="HeadMesh" type="MeshInstance3D" parent="HeadOriginalPosition/Head/CamSmooth/Camera3D"]
transform = Transform3D(0.62, 0, 0, 0, 0.62, 0, 0, 0, 0.62, 0, 0, 0)
mesh = SubResource("SphereMesh_di1wr")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_8j2mw")

[node name="Flashlight" type="SpotLight3D" parent="HeadOriginalPosition/Head/CamSmooth/Camera3D"]
unique_name_in_owner = true
visible = false
light_energy = 5.0
light_indirect_energy = 10.0
light_projector = ExtResource("3_nn08x")
shadow_enabled = true
spot_range = 10.0
spot_angle = 30.0

[node name="InterCast" type="RayCast3D" parent="HeadOriginalPosition/Head/CamSmooth/Camera3D"]
target_position = Vector3(0, 0, -3.5)
collision_mask = 6
collide_with_areas = true
script = ExtResource("3_dewec")

[node name="GrabbingPointNode" type="Node3D" parent="HeadOriginalPosition/Head/CamSmooth/Camera3D/InterCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.49692)

[node name="CSGBox3D" type="CSGBox3D" parent="HeadOriginalPosition/Head/CamSmooth/Camera3D/InterCast/GrabbingPointNode"]
visible = false
size = Vector3(0.1, 0.1, 0.1)

[node name="StairCast" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.377795, -0.685)
target_position = Vector3(0, -0.75, 0)
collision_mask = 5

[node name="BelowCast" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0150586, 0)
target_position = Vector3(0, -0.75, 0)
collision_mask = 5

[node name="Menu" parent="." instance=ExtResource("4_dewec")]
visible = false
in_game = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 149.0
offset_bottom = 40.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
texture_filter = 1
layout_mode = 0
offset_right = 100.0
offset_bottom = 40.0
text = "FPS: 000.0"
label_settings = SubResource("LabelSettings_dewec")

[node name="Crosshair" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
mouse_behavior_recursive = 1
script = ExtResource("5_5ixxa")

[node name="Crosshair" type="ColorRect" parent="CanvasLayer/Crosshair"]
layout_mode = 0
offset_left = 638.0
offset_top = 358.0
offset_right = 642.0
offset_bottom = 362.0
mouse_filter = 2
color = Color(1, 0.811, 0.37, 1)

[node name="Crosshair4" type="ColorRect" parent="CanvasLayer/Crosshair"]
layout_mode = 0
offset_left = 639.0
offset_top = 354.0
offset_right = 641.0
offset_bottom = 356.0
mouse_filter = 2
color = Color(1, 0.811, 0.37, 1)

[node name="Crosshair5" type="ColorRect" parent="CanvasLayer/Crosshair"]
layout_mode = 0
offset_left = 639.0
offset_top = 364.0
offset_right = 641.0
offset_bottom = 366.0
mouse_filter = 2
color = Color(1, 0.811, 0.37, 1)

[node name="Crosshair2" type="ColorRect" parent="CanvasLayer/Crosshair"]
layout_mode = 0
offset_left = 634.0
offset_top = 359.0
offset_right = 636.0
offset_bottom = 361.0
mouse_filter = 2
color = Color(1, 0.811, 0.37, 1)

[node name="Crosshair3" type="ColorRect" parent="CanvasLayer/Crosshair"]
layout_mode = 0
offset_left = 644.0
offset_top = 359.0
offset_right = 646.0
offset_bottom = 361.0
mouse_filter = 2
color = Color(1, 0.811, 0.37, 1)
